# boost_mini_chat

mini_client/: CMakeLists.txt  main.cpp
mini_server/: CMakeLists.txt  main.cpp
